# zcookbook

./: README.md
guides/: search_over_many_pdfs.ipynb
guides/automated_monitoring_alerting/: .env.example  README.md  index.py  monitor_and_alert.py
guides/index_and_query_quickstart/: README.md  query.py
guides/openai_deepresearch/: openai_deepresearch.ipynb  requirements.txt  server.py
guides/rerank_llamaparsed_pdfs/: rerank_llamaparsed_pdfs.ipynb
guides/reranker_quickstart/: README.md  pyproject.toml  rerank_llamaparsed_pages.ipynb  stackoverflow_example.py
guides/retrieval_quickstart/: README.md  pyproject.toml  retrieval_quickstart.ipynb  retrieval_search_example.py
guides/retrieval_quickstart/sample_docs/: api_reference.md  intro.md  tutorial.md
guides/sagemaker_usage/: aws_config.py  zerank-1-SageMaker-model.ipynb  zerank-2-SageMaker-model.ipynb
guides/search_tool_for_agents/: .gitignore  README.md  main.py  pyproject.toml
guides/search_tool_for_voice_agents/: pyproject.toml  search_tool_for_voice_agents.ipynb  search_tool_for_voice_agents.py  ze_mcp_with_voice_agents.py  ze_tools.py  ze_tools_with_voice_agents.py
guides/semantic_search_over_articles/: .env.example  .gitignore  Dockerfile  README.md  articles.json  demo_notebook.ipynb  docker-compose.yml  requirements.txt
guides/semantic_search_over_articles/backend/: __main__.py  indexer_ze.py  search_ze.py  utils_ze.py
guides/semantic_search_over_markdown/: semantic_search_over_markdown.ipynb
guides/zembed_quickstart/: README.md  pyproject.toml  zembed_api_guide.ipynb
(+6 files in other folders)
